# unity-cpp-project

./: .gitignore  .gitmodules  README.md
Assets/Scenes/: SampleScene.unity
Assets/Source/: NativeComponent.cs  NativeConstants.cs  NativeInitializer.cs  TestComponent.cs
Assets/Source/NativeBridges/: NativeBridge.cs  NativeBridgeImpl.cs  NativeDelegates.cs  NativeImports.cs
Assets/Source/UnityEngineFacade/: GameObjectFacade.cs  TransformFacade.cs
Assets/UnityCpp/: NativeConstants.cs  NativeEntryPoint.cs
Assets/UnityCpp/Editor/: NativeProjectSetup.cs
Assets/UnityCpp/Loader/: NativeAssembly.cs
Assets/UnityCpp/NativeBridge/: NativeConstants.cs  NativeDelegates.cs  NativeEntryPoint.cs  NativeFunctions.cs  NativeImports.cs  NativeMethods.cs  NativeMethodsImpl.cs  NativeMethodsImplementation.cs  UnmanagedValue.cs  UnmanagedVaue  UnmanagedVaue.cs
Assets/UnityCpp/NativeBridge/NativeMonoBehaviour/: NativeMonoBehaviour.cs
Assets/UnityCpp/NativeBridge/Reflection/: ReflectionHelpers.cs
Assets/UnityCpp/NativeBridge/Scripting/: NativeMonoBehaviour.cs
Assets/UnityCpp/NativeBridge/UnityBridges/: BehaviourBridge.cs  ComponentBridge.cs  GameObjectBridge.cs  MonoBehaviourBridge.cs  NativeMonoBehaviourBridge.cs  ObjectBridge.cs  QuaternionBridge.cs  TransformBridge.cs  Vector3Bridge.cs
Assets/UnityCpp/NativeBridges/: NativeBridge.cs  NativeBridgeImpl.cs
CppSource/: CMakeLists.txt
CppSource/UnityCppAssemblyHelper/: AssemblyHelper.cpp
CppSource/UnityCppLib/Components/: NativeComponent.cpp  NativeComponent.h  RequiredComponentDefines.h
CppSource/UnityCppLib/Components/Factory/: ComponentFactory.cpp  ComponentFactory.h
CppSource/UnityCppLib/Game/: ComponentsEntryPoint.cpp  ComponentsRegistration.h  TestComponent.cpp  TestComponent.h
CppSource/UnityCppLib/UnityAPI/: UnityAPIExtern.cpp  UnityAPIExtern.h  UnityInitialization.cpp
CppSource/UnityCppLib/UnityAPI/ClassRegistry/: Registry.cpp  Registry.h
CppSource/UnityCppLib/UnityAPI/CppEngine/: Registry.cpp  Registry.h  Trash.cpp  Trash.h
CppSource/UnityCppLib/UnityAPI/CppEngine/semaphores/: multiplat_semaphore.cpp  multiplat_semaphore.h
CppSource/UnityCppLib/UnityAPI/Helpers/: Helpers.cpp  Helpers.h  StringsHelper.cpp  StringsHelper.h
CppSource/UnityCppLib/UnityAPI/ManagedBridge/: Managed.cpp  Managed.h  ManagedAssembly.cpp  ManagedAssembly.h  ManagedAssemblyInfo.cpp  ManagedAssemblyInfo.h  ManagedInstance.cpp  ManagedInstance.h  ManagedMember.cpp  ManagedMember.h  ManagedPointer.cpp  ManagedPointer.h  ManagedType.cpp  ManagedType.h  MemberType.h  UnmanagedValue.cpp  UnmanagedValue.h
CppSource/UnityCppLib/UnityAPI/ManagedBridge/Members/: ConstructorMember.cpp  ConstructorMember.h  FieldMember.cpp  FieldMember.h  ManagedMember.cpp  ManagedMember.h  MemberType.h  MethodMember.cpp  MethodMember.h  PropertyMember.cpp  PropertyMember.h
CppSource/UnityCppLib/UnityAPI/NetFramework/: System.cpp  System.h
CppSource/UnityCppLib/UnityAPI/UnityEngine/: Behaviour.cpp  Behaviour.h  Component.cpp  Component.h  Debug.cpp  Debug.h  GameObject.cpp  GameObject.h  GameObjectTemplates.cpp  HideFlags.h  Managed.cpp  Managed.h  MonoBehaviour.cpp  MonoBehaviour.h  Object.cpp  Object.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  UnityEngine.cpp  UnityEngine.h  Vector3.cpp  Vector3.h
CppSource/UnityCppTestApp/: NativeComponentPrivate.h  UnityInitialization.h  main.cpp
CppSource/src/Components/: CustomComponent.cpp  CustomComponent.h  NativeComponent.cpp  NativeComponent.h  RequiredComponentDefines.h
CppSource/src/Components/Factory/: ComponentFactory.cpp  ComponentFactory.h  ComponentFactoryExtern.cpp  ComponentFactoryExtern.h
CppSource/src/Game/: ComponentsRegistration.h  TestComponent.cpp  TestComponent.h
CppSource/src/UnityAPI/: UnityAPIExtern.h  UnityInitialization.cpp
ProjectSettings/: ProjectSettings.asset
